--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #f5f7fa;
+  background-color: #fff;
 }
 
 .main-section {
   min-width: 380px;
   background-color: #fff;
-  margin: 40px auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     6px 6px 20px rgba(0, 0, 0, 0.1);
 }
@@ -15,7 +14,6 @@ body {
   .main-section {
     display: flex;
     flex-direction: row-reverse;
-    max-width: 1200px;
   }
 }
 /* main content section */
@@ -63,7 +61,7 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #595959;
+  color: #000;
 }
 
 /* my projects section */
@@ -73,11 +71,11 @@ body {
 }
 
 .my-projects-name {
-  margin-left: 40px;
+  margin-left: 5px;
 }
 
 .my-project-h {
-  margin: 6px 0;
+  margin-left: 5px;
 }
 
 .my-projects-item {
@@ -92,14 +90,14 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #595959;
+  color: #000;
 }
 .my-projects-link {
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #595959;
+  color: #000;
   margin-left: 5px;
 }
 
@@ -130,7 +128,7 @@ body {
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
-  color: #a8a8a8;
+  color: #000;
   margin: 0 0 10px 0;
 }
 
@@ -147,7 +145,7 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #595959;
+  color: #000;
 }
 
 .my-work-experience-company-block {
@@ -183,7 +181,7 @@ body {
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
-  color: #a8a8a8;
+  color: #000;
   margin: 10px 0 0 0;
 }
 
