--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,20 @@ body {
   background-color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
     6px 6px 20px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 760px) {
   .main-section {
     display: flex;
     flex-direction: row-reverse;
+    max-width: 1200px;
   }
 }
 /* main content section */
 
 .main-content-section {
-  padding: 100px 90px 100px 90px;
+  padding: 155px 90px 100px 90px;
 }
 
 .main-content-title {
